feature: basic endpoints added
