# internal/app/model/segment.go
@@ -1,0 +1,6 @@
+package model
+
+type Segment struct {
+	Name    string `json:"name" example:"SEGMENT10"`
+	Expires string `json:"expires" example:"2023-08-25T17:00:05"`
+}
